--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,8 @@
     <title>チーズアカデミーTOKYO</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <noscript><link rel="stylesheet" href="./css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="css/main.css" />
+    <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
 
@@ -16,8 +16,8 @@
         <header id="header">
             <div class="logo">
                 <a href="./index.html">
-                    <img class="headlog" src="/img/header_logo_white.png" alt="ヘッダーロゴ">
-                    <img class="headicon" src="/img/cheese.png" alt="ヘッダーアイコン">
+                    <img class="headlog" src="img/header_logo_white.png" alt="ヘッダーロゴ">
+                    <img class="headicon" src="img/cheese.png" alt="ヘッダーアイコン">
                 </a>
             </div>
             <div class="content">
@@ -64,17 +64,17 @@
                 <p>未経験からでもスタートができるよう、カリキュラムは多くの専門家や<br>
                 現役チーズ職人のアドバイスのもと、作られました。</p>
                 <div class="course-content">
-                    <span class="image_main"><img src="/img/course_01.jpg" alt="北海道の草原イメージ" /></span>
+                    <span class="image_main"><img src="img/course_01.jpg" alt="北海道の草原イメージ" /></span>
                     <h3>本格的な農園を使った実地研修</h3>
                     <p>チーズアカデミーでは、本格的な農園を使った実地研修を行うことができます。プロとして活躍するチーズ職人も使用するような、広大で環境も整った農園を余すところなく使い、卒業時には本格的なチーズを自分の力で作れる実践力の養成を目指します。</p>
                 </div>
                 <div class="course-content">
-                    <span class="image_main"><img src="/img/course_02.jpg" alt="黒板の前に立つ先生のイメージ" /></span>
+                    <span class="image_main"><img src="img/course_02.jpg" alt="黒板の前に立つ先生のイメージ" /></span>
                     <h3>必要な知識もしっかりと取得</h3>
                     <p>チーズ作りには、しっかりとした食に関する知識が欠かせません。チーズアカデミーでは、一流講師陣による、チーズ作りに必要ないろはを余すところなく学べます。チーズそのものでなく、栄養学全般を学ぶことも可能ですので、チーズ以外への展開も夢ではないでしょう。</p>
                 </div>
                 <div class="course-content">
-                    <span class="image_main"><img src="/img/course_03.jpg" alt="チーズをテイスティングしているイメージ" /></span>
+                    <span class="image_main"><img src="img/course_03.jpg" alt="チーズをテイスティングしているイメージ" /></span>
                     <h3>卒業制作はティスティング審査あり</h3>
                     <p>チーズアカデミーでは最後の2ヶ月間で卒業制作を実施。卒業制作として、チーズ作りを実際に行います。卒業後、一般参加によるティスティング審査があるため、作り手の目線だけでなく、消費者の目線から、卒業制作作品としてのチーズを、しっかりと評価いただくことができます。</p>
                 </div>
@@ -86,21 +86,21 @@
                 <h3>ニュース</h3>
                 <div class="news-container">
                     <div class="news-item">
-                        <span class="image_main"><img src="/img/news_img.jpg" alt="カットピザを持ち上げるイメージ" /></span>
+                        <span class="image_main"><img src="img/news_img.jpg" alt="カットピザを持ち上げるイメージ" /></span>
                         <p class="date">2016/11/18</p>
                         <p>チーズアカデミー卒業生のコスゲさんによる<br>
                         チーズだけをふんだんに使用した話題のピザ屋<br>
                         「Kosuge Pizza」が渋谷でオープンしました！</p>
                     </div>
                     <div class="news-item">
-                        <span class="image_main"><img src="/img/news_img.jpg" alt="カットピザを持ち上げるイメージ" /></span>
+                        <span class="image_main"><img src="img/news_img.jpg" alt="カットピザを持ち上げるイメージ" /></span>
                         <p class="date">2016/11/18</p>
                         <p>チーズアカデミー卒業生のコスゲさんによる<br>
                         チーズだけをふんだんに使用した話題のピザ屋<br>
                         「Kosuge Pizza」が渋谷でオープンしました！</p>
                     </div>
                     <div class="news-item">
-                        <span class="image_main"><img src="/img/news_img.jpg" alt="カットピザを持ち上げるイメージ" /></span>
+                        <span class="image_main"><img src="img/news_img.jpg" alt="カットピザを持ち上げるイメージ" /></span>
                         <p class="date">2016/11/18</p>
                         <p>チーズアカデミー卒業生のコスゲさんによる<br>
                         チーズだけをふんだんに使用した話題のピザ屋<br>
@@ -216,11 +216,11 @@
     <div id="bg"></div>
 
     <!-- Scripts -->
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/browser.min.js"></script>
-    <script src="./js/breakpoints.min.js"></script>
-    <script src="./js/util.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/breakpoints.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
