--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <!-- 最初の設定は終わっています　必要な方は触ってください -->
@@ -98,7 +98,7 @@
                  </div>
                  <div class="course-content-box">
                   <div class="course-content-img-box">
-                    <img class="course-content-img"  src="/img/course_01.jpg" alt="北海道の草原イメージ">
+                    <img class="course-content-img"  src="img/course_01.jpg" alt="北海道の草原イメージ">
                   </div>
                   <div class="course-content-text-box">
                     <div class="course-content1">
@@ -129,12 +129,12 @@
                      </div>
                   </div>
                   <div class="course-content-img-box">
-                    <img class="course-content-img" src="/img/course_02.jpg" alt="黒板の前に立つ先生のイメージ">
+                    <img class="course-content-img" src="img/course_02.jpg" alt="黒板の前に立つ先生のイメージ">
                   </div>
                  </div>
                  <div class="course-content-box">
                   <div class="course-content-img-box">
-                    <img class="course-content-img" src="/img/course_03.jpg" alt="チーズをテイスティングしているイメージ">
+                    <img class="course-content-img" src="img/course_03.jpg" alt="チーズをテイスティングしているイメージ">
                   </div>
                   <div class="course-content-text-box">
                     <div class="course-content3">
@@ -158,7 +158,7 @@
                 <!-- ニュース記事 -->
                  <div class="news-container-box">
                   <div class="news-container-img">
-                    <img src="/img/news_img.jpg" alt="カットピザを持ち上げるイメージ">
+                    <img src="img/news_img.jpg" alt="カットピザを持ち上げるイメージ">
                   </div>
                   <div class="news-container-date">
                     2016/11/18
@@ -171,7 +171,7 @@
                  </div>
                  <div class="news-container-box">
                   <div class="news-container-img">
-                    <img src="/img/news_img.jpg" alt="カットピザを持ち上げるイメージ">
+                    <img src="img/news_img.jpg" alt="カットピザを持ち上げるイメージ">
                   </div>
                   <div class="news-container-date">
                     2016/11/18
@@ -184,7 +184,7 @@
                  </div>
                  <div class="news-container-box">
                   <div class="news-container-img">
-                    <img src="/img/news_img.jpg" alt="カットピザを持ち上げるイメージ">
+                    <img src="img/news_img.jpg" alt="カットピザを持ち上げるイメージ">
                   </div>
                   <div class="news-container-date">
                     2016/11/18
@@ -297,8 +297,8 @@
   
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="js/jquery.inview.js" type="text/javascript"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="/slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
   <script src="js/main_1.js"></script>
 </body>
 
