--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
           <!-- <p></p>
           <p></p>
           <ul class="imgs-slider">
-            <li><img src="/img/about_04.jpg" alt="pizza"></li>
-            <li><img src="/img/about_03.jpg" alt="pizza"></li>
-            <li><img src="/img/about_02.jpg" alt="pizza"></li>
-            <li><img src="/img/about_01.jpg" alt="pizza"></li>
+            <li><img src="img/about_04.jpg" alt="pizza"></li>
+            <li><img src="img/about_03.jpg" alt="pizza"></li>
+            <li><img src="img/about_02.jpg" alt="pizza"></li>
+            <li><img src="img/about_01.jpg" alt="pizza"></li>
           </ul> -->
         </section>
 
