index.html logo Img link modified

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="top">
           <div class="hedderlogo">
             <a href="./index2.html">
-              <img src="./img/header_logo.png" alt="ヘッダーロゴ">
+              <img src="img/header_logo.png" alt="ヘッダーロゴ">
             </a>
           </div>
           <div class="clicklogo">
-            <img src="./img/click.svg" alt="クリックアイコン">
+            <img src="img/click.svg" alt="クリックアイコン">
           </div>
           <nav>
               <ul class="nav-items">
